--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=traineeship-management-app
+spring.datasource.url=jdbc:mysql://localhost:3306/myy803_myy803_traineshipApp?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
